--- a/SourceCode/WorkSplitor/WorkSplitor.csproj
+++ b/SourceCode/WorkSplitor/WorkSplitor.csproj
@@ -41,10 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IWordElement.cs" />
-    <Compile Include="LinkNode.cs" />
+    <Compile Include="Models\IWordNode.cs" />
+    <Compile Include="Models\LinkNode.cs" />
+    <Compile Include="Models\TextNodeType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextNode.cs" />
+    <Compile Include="Models\TextNode.cs" />
     <Compile Include="WordSplitor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
